@@ -356,11 +356,11 @@ class CConfigurationExport {
 	protected function gatherHostDiscoveryRules() {
 		$items = API::DiscoveryRule()->get(array(
 			'hostids' => $this->options['hosts'],
-			'output' => array('itemid', 'hostid', 'multiplier', 'type', 'snmp_community', 'snmp_oid', 'name', 'key_', 'delay', 'history', 'trends',
+			'output' => array('itemid', 'hostid', 'type', 'snmp_community', 'snmp_oid', 'name', 'key_', 'delay', 'history', 'trends',
 				'status', 'value_type', 'trapper_hosts', 'units', 'delta', 'snmpv3_securityname', 'snmpv3_securitylevel',
 				'snmpv3_authpassphrase', 'snmpv3_privpassphrase', 'formula', 'valuemapid', 'delay_flex', 'params',
 				'ipmi_sensor', 'data_type', 'authtype', 'username', 'password', 'publickey', 'privatekey',
-				'interfaceid', 'port', 'description', 'inventory_link', 'flags'),
+				'interfaceid', 'port', 'description', 'inventory_link', 'flags', 'filter', 'lifetime'),
 			'inherited' => false,
 			'preservekeys' => true
 		));
@@ -381,11 +381,11 @@ class CConfigurationExport {
 	protected function gatherTemplateDiscoveryRules() {
 		$items = API::DiscoveryRule()->get(array(
 			'hostids' => $this->options['templates'],
-			'output' => array('itemid', 'hostid', 'multiplier', 'type', 'snmp_community', 'snmp_oid', 'name', 'key_', 'delay', 'history', 'trends',
+			'output' => array('itemid', 'hostid', 'type', 'snmp_community', 'snmp_oid', 'name', 'key_', 'delay', 'history', 'trends',
 				'status', 'value_type', 'trapper_hosts', 'units', 'delta', 'snmpv3_securityname', 'snmpv3_securitylevel',
 				'snmpv3_authpassphrase', 'snmpv3_privpassphrase', 'formula', 'valuemapid', 'delay_flex', 'params',
 				'ipmi_sensor', 'data_type', 'authtype', 'username', 'password', 'publickey', 'privatekey',
-				'interfaceid', 'port', 'description', 'inventory_link', 'flags'),
+				'interfaceid', 'port', 'description', 'inventory_link', 'flags', 'filter', 'lifetime'),
 			'inherited' => false,
 			'preservekeys' => true
 		));
